--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   </style>
 </head>
 <body>
-  <img src="images\image-product-desktop.jpg" alt="parfum"> 
+  <img src="image-product-desktop.jpg" alt="parfum"> 
 <section>
 
  <h6>Perfume</h6>
@@ -28,7 +28,7 @@
   <span class="Price">$149.99</span>
   <span class="price2">$169.99</span>
 
-  <button><img src="images\icon-cart.svg" alt="icon"class="icon">Add to Cart</button>
+  <button><img src="icon-cart.svg" alt="icon"class="icon">Add to Cart</button>
   
 </section>
   
